--- a/app/src/main/res/layout/activity_staff_dashboard.xml
+++ b/app/src/main/res/layout/activity_staff_dashboard.xml
@@ -5,7 +5,7 @@
     android:id="@+id/staff_dashboard"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="?android:windowBackground"
     tools:context=".StaffDashboard">
 
 
