--- a/app/src/main/res/layout/fragment_staff_class_list.xml
+++ b/app/src/main/res/layout/fragment_staff_class_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="?android:windowBackground"
     android:theme="@style/AppTheme.NoActionBar"
     tools:context="Fragment_staff_class_list">
 
